Alpha 0.0
- We decide to create this project.
- Source code is under BSD Licence

Alpha 0.1
- Shell command handling is now ready
- Different type of prompts are created

Alpha 0.2
- Pre-Implement some commands
-- show version
-- hostname <string>
-- default (input|output|forward)-policy (deny|allow)

Alpha 0.3
- Implement some commands
-- show version
-- show interfaces
-- save

Alpha 0.4
- Implement some commands
-- show acls
-- acl <name> (...)
-- ip routing
-- firewall -> disable | enable
-- interface <name>
- Loading configuration from configuration file
- Stability fixes

Alpha 0.5
- iputils added to calculate some things under IPs
- Remove default forward-policy
- Implement interface <name> -> shutdown
- Implement show ip routes
- Implement no <cmd> handling
- Implement no shutdown command
- Prepare interface acl handling
- Implement saving configuration

Alpha 0.6
- Pré-implément ACL binding for in/out on interfaces
- Update Copyright for 2012
- Implement prompt_msg file which contains majority of text macros
- Implement ip routing & ip multicast-routing

Alpha 0.7
- Implement show running-config
- Implement show startup-config
- Implement ip route A.B.C.D M.A.S.K G.A.T.E

Alpha 0.8
- interactive shell for extended ACLs (ip access-list <name> extended command)

Alpha 0.9
- Caught CTRL+C & CTRL+Z signal for return to enable menu

Alpha 0.10 - prev
- Use DHClient only when interface is up
- Save Interface configuration in system when command save is done
- Implement function to calculate str netmask by cidr
- Bugfix on Interface <name> -> Description command