@@ -60,3 +60,4 @@ Alpha 0.10 - prev
 - Save Interface configuration in system when command save is done
 - Implement function to calculate str netmask by cidr
 - Bugfix on Interface <name> -> Description command
+- Implement Interface -> no description command
